Actualizada la traducción, ahora se entiende mejor que es consulta y no comunidad

--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -1,7 +1,27 @@
 {
-  "settings.sidebar.forums": "Administración",
-  "newsfeed.call-to-action.manage-forums": "Administración",
-
+  "settings.sidebar.forums": "Consultas",
+  "newsfeed.call-to-action.manage-forums": "Consultas",
+  "admin-sidebar.topics.title": "Ejes",
+  "admin-sidebar.edit-forum.title": "Editar consulta",
+  "admin-topics-form.title.create": "Nuevo eje (o propuesta)",
+  "admin-topics-form.title.edit": "Edición de eje (o propuesta)",
+  "admin-permissions.visibility.closed.description": "Todos pueden ver la consulta. Eliges quienes pueden participar.",
+  "admin-permissions.visibility.collaborative.description": "Todos pueden ver y crear la consulta además de participar.",
+  "admin-permissions.visibility.private.description": "Eliges quién puede ver la consulta y participar.",
+  "admin-permissions.visibility.public.description": "Todos pueden ver la consulta y participar.",
+  "header.forums": "Mis Consultas",
+  "admin-topics.list.search.placeholder": "Buscar un eje...",
+  "admin-topics.list.title": "Temas del sistema",
+  "admin-topics.update-from-csv": "Actualizar temas desde .csv",
+  "forum.form.summary.placeholder": "¿De qué se trata tu consulta?",
+  "forum.form.title": "Crear mi Consulta",
+  "forum.form.edit.title": "Editar mi Consulta",
+  "forum.form.title.label": "Título",
+  "forum.form.title.placeholder": "El título para tu consulta",
+  "forum.form.url.label": "URL de la consulta",
+  "forum.form.url.unavailable": "La URL no está disponible",
+  "forum.status.creating": "Creando consulta...",
+  "admin-topics-form.description.tags": "Etiquetas para el eje/propuesta, separarlos apretando ENTER o TAB",
   "admin-topics-form.description.author": "Nombre del autor u organismo responsable",
   "admin-topics-form.description.authorUrl": "URL con información del autor",
   "admin-topics-form.placeholder.author": "Ministerio de Modernizacion",
