--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -27,6 +27,11 @@
   "admin-topics-form.placeholder.author": "Ministerio de Modernizacion",
   "admin-topics-form.placeholder.authorUrl": "https://www.argentina.gob.ar/modernizacion",
   "admin-sidebar.comments.title": "Comentarios y estadisticas",
+  "admin-stats.comments.adminMarks.important": "Destacado",
+  "admin-stats.comments.adminMarks.derive": "Derivar",
+  "admin-stats.comments.adminMarks.doesNotApply": "No aplica",
+  "admin-stats.comments.adminMarks.alert": "Alerta",
+  "admin-stats.comments.adminMarks.question": "Pregunta",
   "comment-card.flagged-as-spam": "Este comentario fue reportado como abuso",
   "comment-card.remove-argument": "Borrar comentario",
   "comments.argument-limited": "El comentario no puede exceder los 4096 caracteres",
