--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -58,6 +58,7 @@
   "comments.your-argument": "Tu comentario",
   "comments.your.arguments": "Tus comentarios",
   "proposal-options.must-be-signed-in": "Debés estar registrado para participar",
+  "proposal-options.vote-item": " voto",
   "forum.form.rich.summary.label": "Resumen largo",
   "forum.form.contentType.label": "Tipo de contenido"
 }
