agregado botón de verificar cuenta en caja de comentarios

--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -57,6 +57,7 @@
   "comments.sign-in-required": "Debés estar registrado para participar",
   "comments.your-argument": "Tu comentario",
   "comments.your.arguments": "Tus comentarios",
+  "comments.create.verify": "Verificar cuenta",
   "proposal-options.must-be-signed-in": "Debés estar registrado para participar",
   "proposal-options.vote-item": " voto",
   "forum.form.rich.summary.label": "Resumen largo",
