Nuevo campo de "sugerencia" en editar consulta, para consultas de tipo llamado; después se muestra en formulario de carga de prop. ciud.

--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -28,6 +28,9 @@
   "forum.form.title.placeholder": "El título para tu consulta",
   "forum.form.url.label": "URL de la consulta",
   "forum.form.url.unavailable": "La URL no está disponible",
+  "forum.form.contentType.llamado": "Convocatoria",
+  "forum.form.sugerencia.label": "Sugerencia para usuarios",
+  "forum.form.sugerencia.placeholder": "Este texto aparecerá en la carga de propuestas",
   "forum.status.creating": "Creando consulta...",
   "admin-topics-form.description.tags": "Etiquetas para el eje/propuesta, separarlos apretando ENTER o TAB",
   "admin-topics-form.description.author": "Nombre del autor u organismo responsable",
