Nuevos campos palabras y link de cierre, en creación/edición de consultas

--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -31,6 +31,9 @@
   "forum.form.contentType.llamado": "Convocatoria",
   "forum.form.sugerencia.label": "Sugerencia para usuarios",
   "forum.form.sugerencia.placeholder": "Este texto aparecerá en la carga de propuestas",
+  "forum.form.palabrasCierre.label": "Palabras de cierre",
+  "forum.form.linkCierre.label": "Link a informe de cierre",
+  "forum.form.linkCierre.placeholder": "Este link se verá al cerrar la consulta",
   "forum.status.creating": "Creando consulta...",
   "admin-topics-form.description.tags": "Etiquetas para el eje/propuesta, separarlos apretando ENTER o TAB",
   "admin-topics-form.description.author": "Nombre del autor u organismo responsable",
